Update Aboutus/Indroduction on homepage

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -112,26 +112,19 @@
   </div>
 </div>
 
-<h2 id="เกยวกบ-ผานไป--phaanpai">เกี่ยวกับ “ผ่านไป | PhaanPai”</h2>
-<p>“ผ่านไป | PhaanPai” ช่องเล่าเรื่องชีวิตของคนธรรมดา<br>
-🚶‍♂️ ที่กำลังเดินไปข้างหน้า  แม้บางวันจะเหนื่อย สับสน หรือไม่รู้คำตอบ❓</p>
+<h2 id="ผานไป--phaanpai-ชองทแชรเรองราวตางๆของคนธรรมดาคนหนง">“ผ่านไป | PhaanPai” ช่องที่แชร์เรื่องราวต่างๆของคนธรรมดาคนหนึ่ง</h2>
+<h2></h2>
 <ul>
-<li>ไม่สอนให้สำเร็จ</li>
-<li>ไม่เร่งให้เก่งกว่าใคร</li>
-<li>แค่ชวนกันอยู่กับชีวิต</li>
-<li>ในวันที่ทุกอย่างค่อย ๆ ผ่านไป</li>
+<li>ชีวิต 🛟</li>
+<li>ความรู้สึก 😶‍🌫️</li>
+<li>ครอบครัว 👨‍👨‍👧‍👦</li>
+<li>ความสัมพันธ์</li>
+<li>การตัดสินใจ 🤯</li>
+<li>งาน 💼</li>
+<li>การเริ่มต้นใหม่ 🎬</li>
 </ul>
-<p>ผ่านไป — แต่เราไม่ได้หายไป</p>
-<h2 id="เราเขยนเรองอะไรบาง">เราเขียนเรื่องอะไรบ้าง</h2>
-<ul>
-<li>ชีวิต / ความรู้สึก / การเติบโตแบบช้า ๆ</li>
-<li>ครอบครัว / ความสัมพันธ์ / การตัดสินใจ</li>
-<li>งาน / การเริ่มต้นใหม่</li>
-<li>คำถามที่มักเจอในชีวิตจริง</li>
-</ul>
-<h2 id="ทำไมชอ-ผานไป">ทำไมชื่อ “ผ่านไป”</h2>
-<p>เพราะบางวันมันหนักจริง ๆ แต่สุดท้ายมันก็ “ผ่านไป”<br>
-และเรา…ยังอยู่ตรงนี้</p>
+<h2 id="เพราะทกๆอยาง-มนจะคอยๆ-ผานไป--แตเราจะไมไดหายไป">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เรา&hellip;จะไม่ได้หายไป</h2>
+<h2></h2>
 <div class="pp-about-links">
   <div class="pp-card">
     <h3 class="pp-card__title">ติดต่อ / ติดตาม</h3>
