Update why we want to quit the job by positive thinking

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -112,18 +112,34 @@
   </div>
 </div>
 
-<h2 id="ผานไป--phaanpai-ชองทแชรเรองราวตางๆของคนธรรมดาคนหนง">“ผ่านไป | PhaanPai” ช่องที่แชร์เรื่องราวต่างๆของคนธรรมดาคนหนึ่ง</h2>
+<h2 id="ผานไป--phaanpai-หากวนหนงผมไมอยแลว">“ผ่านไป | PhaanPai” หากวันหนึ่งผมไม่อยู่แล้ว</h2>
 <h2></h2>
-<ul>
-<li>ชีวิต 🛟</li>
-<li>ความรู้สึก 😶‍🌫️</li>
-<li>ครอบครัว 👨‍👨‍👧‍👦</li>
-<li>ความสัมพันธ์</li>
-<li>การตัดสินใจ 🤯</li>
-<li>งาน 💼</li>
-<li>การเริ่มต้นใหม่ 🎬</li>
-</ul>
-<h2 id="เพราะทกๆอยาง-มนจะคอยๆ-ผานไป--แตเราจะไมไดหายไป">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เรา&hellip;จะไม่ได้หายไป</h2>
+<p>นี่คือคำบอกเล่าว่าผมมองโลกนี้อย่างไร</p>
+<h1></h1>
+<p>ผ่านเลนส์ของผม</p>
+<h1></h1>
+<p>เพื่อทิ้งร่องรอยความคิด ชีวิตของคนธรรมดาคนหนึ่ง</p>
+<h1></h1>
+<p>สำหรับผู้ที่ผ่านเข้ามา ไม่ว่าจะเป็นคนในเวลานี้ หรือในอนาคต</p>
+<h1></h1>
+<p>ให้ได้ลองนำไปคิด ลองนำไปปรับใช้กับชีวิต</p>
+<h1></h1>
+<p>เป็นช่องที่แชร์เรื่องราวต่างๆ</p>
+<h1></h1>
+<p>• ชีวิต 🛟</p>
+<h1></h1>
+<p>• ความรู้สึก 😶‍🌫️</p>
+<h1></h1>
+<p>• ครอบครัว 👨‍👨‍👧‍👦</p>
+<h1></h1>
+<p>• ความสัมพันธ์</p>
+<h1></h1>
+<p>• การตัดสินใจ 🤯</p>
+<h1></h1>
+<p>• งาน 💼</p>
+<h1></h1>
+<p>• การเริ่มต้นใหม่ 🎬</p>
+<h2 id="เพราะทกๆอยาง-มนจะคอยๆ-ผานไป--แตเราไมไดหายไป">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เราไม่ได้หายไป</h2>
 <h2></h2>
 <div class="pp-about-links">
   <div class="pp-card">
