Update Homepage and Aboutus content

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.fd8fe42c888362cce3756dd61715324decfaaf85ee8fda3f032d5836582d9a3d.css" integrity="sha256-/Y/kLIiDYszjdW3WFxUyTez6r4Xuj9o/Ay1YNlgtmj0=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.c87caf749c292c4dc5d765a431a6f119907964275ff75ad13f156c830e59bbcc.css" integrity="sha256-yHyvdJwpLE3F12WkMabxGZB5ZCdf91rRPxVsgw5Zu8w=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
@@ -102,26 +102,18 @@
       <div class="pp-intro__text">
         <h1 class="pp-intro__title">ผ่านไป | PhaanPai</h1>
         <p class="pp-intro__lead">
-          หากวันหนึ่งผมไม่อยู่แล้ว<br/>
-          นี่คือคำบอกเล่าว่าผมมองโลกนี้อย่างไร <br/>
-          ผ่านเลนส์ของผม <br/>
-          เพื่อทิ้งร่องรอยความคิด ชีวิตของคนธรรมดาคนหนึ่ง<br/>
-          สำหรับผู้ที่ผ่านเข้ามา ไม่ว่าจะเป็นคนในเวลานี้ หรือในอนาคต <br/>
-          ให้ได้ลองนำไปคิด ลองนำไปปรับใช้กับชีวิต
+          เป็นช่องที่ บันทึกเรื่องราว ร่องรอยต่างๆ ว่า<br/>
+          เคยมองโลกใบนี้อย่างไร<br/>
         </p>
         <div class="pp-intro__divider"></div>
         <p class="pp-intro__body">
-          เป็นช่องที่แชร์เรื่องราวต่างๆ<br/>
-          • ชีวิต 🛟<br/>
-          • ความรู้สึก 😶‍🌫️<br/>
-          • ครอบครัว 👨‍👨‍👧‍👦<br/>
-          • ความสัมพันธ์<br/>
-          • การตัดสินใจ 🤯<br/>
-          • งาน 💼<br/>
-          • การเริ่มต้นใหม่ 🎬
+          ไม่จำเป็นต้องคิดเหมือนกัน<br/>
+          ขอแค่มันช่วยให้คุณ<br/>
+          เสียเวลา ลองผิด ลองถูก น้อยลง<br/>
+          และมีเวลา ไปใช้ชีวิตของตัวเอง มากขึ้น
          </p>
        
-        <p class="pp-intro__closing">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เราไม่ได้หายไป</p>
+        <p class="pp-intro__closing">แค่นั้น… ผมก็ดีใจแล้ว</p>
       </div>
 
       <div class="pp-intro__actions">
