--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="เกี่ยวกับ ผ่านไป | PhaanPai">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.fd8fe42c888362cce3756dd61715324decfaaf85ee8fda3f032d5836582d9a3d.css" integrity="sha256-/Y/kLIiDYszjdW3WFxUyTez6r4Xuj9o/Ay1YNlgtmj0=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.c87caf749c292c4dc5d765a431a6f119907964275ff75ad13f156c830e59bbcc.css" integrity="sha256-yHyvdJwpLE3F12WkMabxGZB5ZCdf91rRPxVsgw5Zu8w=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
@@ -112,34 +112,31 @@
   </div>
 </div>
 
-<h2 id="ผานไป--phaanpai-หากวนหนงผมไมอยแลว">“ผ่านไป | PhaanPai” หากวันหนึ่งผมไม่อยู่แล้ว</h2>
+<h2 id="ผานไป--phaanpai">“ผ่านไป | PhaanPai”</h2>
 <h2></h2>
-<p>นี่คือคำบอกเล่าว่าผมมองโลกนี้อย่างไร</p>
+<p>เป็นช่องที่ บันทึกเรื่องราว ร่องรอยต่างๆ ว่า</p>
 <h1></h1>
-<p>ผ่านเลนส์ของผม</p>
+<p>เคยมองโลกใบนี้อย่างไร</p>
+<h2></h2>
+<p>เข้าใจว่า ทุกอย่างในชีวิต จะค่อย ๆ “ผ่านไป”</p>
+<h2></h2>
+<p>แต่เพราะ เคยหลง เคยเจ็บ และไม่อยากให้ใคร</p>
 <h1></h1>
-<p>เพื่อทิ้งร่องรอยความคิด ชีวิตของคนธรรมดาคนหนึ่ง</p>
+<p>ต้องวนลูปแบบนั้นอีก</p>
+<h2></h2>
+<p>มันคือการส่งต่อ สิ่งที่เราเคยเรียนรู้</p>
 <h1></h1>
-<p>สำหรับผู้ที่ผ่านเข้ามา ไม่ว่าจะเป็นคนในเวลานี้ หรือในอนาคต</p>
+<p>ให้กับคนที่ยังไม่รู้ ที่บังเอิญผ่านมาเจอ</p>
+<h2></h2>
+<p>คุณไม่จำเป็นต้องคิดเหมือนกัน</p>
+<h2></h2>
+<p>ขอแค่เรื่องเล็ก ๆ เหล่านี้ ช่วยให้คุณ</p>
 <h1></h1>
-<p>ให้ได้ลองนำไปคิด ลองนำไปปรับใช้กับชีวิต</p>
+<p>เสียเวลา “ลองผิด ลองถูก” น้อยลง</p>
 <h1></h1>
-<p>เป็นช่องที่แชร์เรื่องราวต่างๆ</p>
-<h1></h1>
-<p>• ชีวิต 🛟</p>
-<h1></h1>
-<p>• ความรู้สึก 😶‍🌫️</p>
-<h1></h1>
-<p>• ครอบครัว 👨‍👨‍👧‍👦</p>
-<h1></h1>
-<p>• ความสัมพันธ์</p>
-<h1></h1>
-<p>• การตัดสินใจ 🤯</p>
-<h1></h1>
-<p>• งาน 💼</p>
-<h1></h1>
-<p>• การเริ่มต้นใหม่ 🎬</p>
-<h2 id="เพราะทกๆอยาง-มนจะคอยๆ-ผานไป--แตเราไมไดหายไป">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เราไม่ได้หายไป</h2>
+<p>และมีเวลา ไปใช้ชีวิตของตัวเอง มากขึ้น</p>
+<p>แค่นั้น…ผมก็ดีใจแล้ว</p>
+<h2 id="แคนนผมกดใจแลว">แค่นั้น…ผมก็ดีใจแล้ว</h2>
 <h2></h2>
 <div class="pp-about-links">
   <div class="pp-card">
