Update Homepage and Aboutus content 31 Dec 2025

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -120,22 +120,21 @@
 <h2></h2>
 <p>เข้าใจว่า ทุกอย่างในชีวิต จะค่อย ๆ “ผ่านไป”</p>
 <h2></h2>
-<p>แต่เพราะ เคยหลง เคยเจ็บ และไม่อยากให้ใคร</p>
+<p>แต่เพราะ เคยหลง เคยเจ็บ</p>
 <h1></h1>
-<p>ต้องวนลูปแบบนั้นอีก</p>
-<h2></h2>
-<p>มันคือการส่งต่อ สิ่งที่เราเคยเรียนรู้</p>
+<p>รู้สึกว่า มันคงจะดี&hellip;</p>
 <h1></h1>
-<p>ให้กับคนที่ยังไม่รู้ ที่บังเอิญผ่านมาเจอ</p>
+<p>ถ้าคนที่มาเจอเรื่องเหล่านี้ภายหลัง</p>
+<h1></h1>
+<p>ไม่ต้องวนลูปแบบนั้นอีก</p>
 <h2></h2>
-<p>คุณไม่จำเป็นต้องคิดเหมือนกัน</p>
+<p>ไม่จำเป็นต้องคิดเหมือนกัน</p>
 <h2></h2>
-<p>ขอแค่เรื่องเล็ก ๆ เหล่านี้ ช่วยให้คุณ</p>
+<p>ขอแค่&hellip; มันมีประโยชน์กับคนอื่นบ้าง</p>
 <h1></h1>
 <p>เสียเวลา “ลองผิด ลองถูก” น้อยลง</p>
 <h1></h1>
 <p>และมีเวลา ไปใช้ชีวิตของตัวเอง มากขึ้น</p>
-<p>แค่นั้น…ผมก็ดีใจแล้ว</p>
 <h2 id="แคนนผมกดใจแลว">แค่นั้น…ผมก็ดีใจแล้ว</h2>
 <h2></h2>
 <div class="pp-about-links">
